# jellydash

./: .gitignore  Home.py  README.md  pyproject.toml  requirements.txt
jellydash/: __init__.py
jellydash/analytics/: __init__.py  games.py  rankings.py  topics.py
jellydash/context/: __init__.py  groq_search.py  segmenter.py
jellydash/db/: __init__.py  connection.py  pg_schema.sql  pg_sync.py  queries.py  schema.py
jellydash/sync/: background.py  scraper.py
jellydash/ui/: components.py  helpers.py
pages/: 1_Leaderboard.py  2_Trending.py  3_Games.py  4_Explorer.py  5_Sync.py  6_Context.py
src/jellydash/analytics/: topics.py
src/jellydash/db/: connection.py  queries.py  schema.py
src/jellydash/sync/: __init__.py
src/jellydash/ui/: __init__.py  helpers.py
tests/: conftest.py  test_db.py  test_games.py  test_rankings.py  test_scraper.py  test_topics.py
